tests/NormalTests/paczka1/small_fuzzy/16135522.err
Error in line 2: xcmell S394 68,8
Error in line 5: xcmell A957 32,6
Error in line 7: N5d5Id0c S394 4,3
Error in line 6: xcmell S394 15,6
Error in line 8: N5d5Id0c A957 40,6
